# TradingAgents

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  quick_start.py  requirements.txt  start_server.sh  test_hk_news.py  test_integration.py  test_unified_service.py
.claude/agents/: cross-validator.md  data-validator.md  quality-controller.md
.claude/agents/analysts/: fundamentals-analyst.md  market-analyst.md  news-analyst.md  social-analyst.md
.claude/agents/decision/: neutral-analyst.md  portfolio-manager.md  risk-manager.md  risky-analyst.md  safe-analyst.md  trader.md
.claude/agents/researchers/: bear-researcher.md  bull-researcher.md  research-manager.md
.claude/commands/: backtest.md  market-scan.md  memory-train.md  portfolio-review.md  risk-assessment.md  trade-analyze.md
.meta/: prompts.md
docs/: architecture.md  environment-setup.md  finnhub-replacement-plan.md  mcp-implementation-old.md  mcp-implementation.md  migration-guide.md  optimization-summary.md  optimized-command-architecture.md  unified-data-architecture.md  usage-guide.md
tradingagents/: __init__.py
tradingagents/mcp/: __init__.py  __main__.py  trading_server.py  trading_server_backup.py
tradingagents/mcp/services/: __init__.py  backtesting.py  data_source_config.py  exchange_compatibility.py  execution_broker.py  financial_data.py  finnhub_data.py  market_data.py  memory_store.py  news_feed.py  proxy_config.py  reddit_data.py  risk_analytics.py  social_sentiment.py  technical_indicators.py  unified_data_service.py
tradingagents/mcp/services/data_sources/: __init__.py  alpha_vantage_source.py  base_source.py  google_news_source.py  yfinance_source.py
